# vrframework

./: .clang-format  .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  FOVEATED_ISR_DESIGN.md  FOVEATED_RENDERING.md  LICENSE  README.md
.github/workflows/: dev-release.yml
RE/util/luadec/: decompile_all.ps1
cmake/: CPM.cmake  directxtk-cross-compile.patch  directxtk.cmake  directxtk_linux.cmake  fidelityfx.cmake  glm.cmake  imgui.cmake  kananlib-clang.patch  kananlib.cmake  minhook.cmake  openxr.cmake  polyhook.cmake  safetyhook.cmake  spdlog.cmake  streamline.cmake  vigemclient.cmake
docs/architecture/: openvr-view-mode-design.md
include/: PCH.h  dgxiProxy.h  dinput8proxy.h
sdk/include/: stl.h
sdk/include/REL/: Relocation.h
shaders/: common.hlsli  debug_layer_ps.hlsl  debug_layer_vs.hlsl  motion_vector_correction_cs.backup.hlsl  motion_vector_correction_cs.hlsl  mvec_original.hlsl
src/: D3D11Hook.cpp  D3D11Hook.hpp  D3D12Hook.cpp  D3D12Hook.hpp  DInputHook.cpp  DInputHook.hpp  DisplayMetricsHook.cpp  DisplayMetricsHook.hpp  ExceptionHandler.cpp  ExceptionHandler.hpp  Framework.cpp  Framework.hpp  GOW2VR.cpp  GOW2VR.hpp  Main.cpp  Mod.hpp  ModSettings.cpp  ModSettings.h  Mods.cpp  Mods.hpp  WindowFilter.cpp  WindowsMessageHook.cpp  WindowsMessageHook.hpp
src/aer/: ConstantsPool.cpp  ConstantsPool.h  ResourcePool.cpp  ResourcePool.h
src/amd/: UpscalerFsr2Module.cpp  UpscalerFsr2Module.h  UpscalerFsr31Module.cpp  UpscalerFsr31Module.h  UpscalerFsr3Module.cpp  UpscalerFsr3Module.h
src/core/: IGameAdapter.hpp  VRFramework.cpp  VRFramework.hpp
src/engine/: DLSSModule.cpp  DLSSModule.h  EngineCameraModule.cpp  EngineCameraModule.h  EngineEntry.cpp  EngineEntry.h  EngineRendererModule.cpp  EngineRendererModule.h  EngineTwicks.cpp  EngineTwicks.h  LuaModule.cpp  LuaModule.h  UIComponent.cpp  UIComponent.h
src/engine/memory/: ScanHelper.h  memory_mul.cpp  memory_mul.h  offsets.h
src/engine/models/: GOWGameState.h  ModSettings.cpp  ModSettings.h  StatefullData.cpp  StatefullData.h
src/experimental/: DebugUtils.cpp  DebugUtils.h
src/games/ExampleUE/: ExampleUECameraModule.cpp  ExampleUECameraModule.h  ExampleUEEntry.cpp  ExampleUEEntry.h  ExampleUERendererModule.cpp  ExampleUERendererModule.h
src/games/ExampleUE/memory/: offsets.h
src/games/ExampleUE/sdk/: ExampleUESDK.h  ExampleUESDK.hpp
src/hooks/: XInputHook.cpp  XInputHook.hpp
src/math/: Math.hpp
src/memory/: MinhookFunctionHook.hpp  PolyHook2FunctionHook.cpp  memory_mul.cpp  memory_mul.h
src/mods/: GOWVRConfig.cpp  GOWVRConfig.hpp  VR.cpp  VR.hpp  VRConfig.cpp  VRConfig.hpp  VariableRateShadingImage.cpp  VariableRateShadingImage.h
src/mods/foveated/: FoveatedAtlas.cpp  FoveatedAtlas.hpp  StereoEmulator.cpp  StereoEmulator.hpp  ViewInjector.cpp  ViewInjector.hpp  VisibilityCache.cpp  VisibilityCache.hpp
src/mods/vr/: Bindings.cpp  D3D11Component.cpp  D3D11Component.hpp  D3D12Component.cpp  D3D12Component.hpp  OverlayComponent.cpp  OverlayComponent.hpp
src/mods/vr/d3d12/: CommandContext.cpp  CommandContext.hpp  ResourceCopier.cpp  TextureContext.hpp
src/mods/vr/runtimes/: OpenVR.cpp  OpenVR.hpp  OpenXR.cpp  OpenXR.hpp  VRRuntime.hpp
src/nvidia/: MotionVectorReprojection.cpp  MotionVectorReprojection.h  MotionVectorReprojectionD3D11.cpp  MotionVectorReprojectionD3D11.h  ShaderDebugOverlay.cpp  ShaderDebugOverlay.h  UpscalerAfrNvidiaModule.cpp  UpscalerAfrNvidiaModule.h  streamline_compat.h
src/shared/sdk/: Math.hpp
src/template/games/godofwar/: GowAdapter.cpp  GowAdapter.hpp
src/utility/: REMath.hpp  ScopeProfiler.cpp  ScopeProfiler.h  VtableIndexFinder.cpp  VtableIndexFinder.h
src/utils/: FunctionHook.h  MinhookFunctionHook.cpp  PolyHook2FunctionHook.h
